applications/observability/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: ListenerSet
      name: observability
  hostnames:
  - observability.jynolen.fr
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana-service
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /grafana
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: ListenerSet
      name: observability
  hostnames:
  - observability.jynolen.fr
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: alertmanager-operated
          port: 9093
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /alertmanager
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: ListenerSet
      name: observability
  hostnames:
  - observability.jynolen.fr
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prometheus-operated
          port: 9090
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /prometheus
---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: jaeger
# spec:
#   parentRefs:
#     - group: gateway.networking.k8s.io	
#       kind: ListenerSet
#       name: observability
#   hostnames:
#   - observability.jynolen.fr
#   rules:
#     - backendRefs:
#         - group: ""
#           kind: Service
#           name: webhook
#           port: 8080
#           weight: 1
#       matches:
#         - path:
#             type: PathPrefix
#             value: /jaeger
# ---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: splunk
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: ListenerSet
      name: observability
  hostnames:
  - observability.jynolen.fr
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: splunk
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /splunk/en-US
    - filters:
      - type: RequestRedirect
        requestRedirect:
          path:
            type: ReplaceFullPath
            replaceFullPath: /splunk/en-US
          statusCode: 308
      matches:
        - path:
            type: Exact
            value: /splunk
